changed default theme to dark mode, changed buttons on project card to be more uniform, fixed mobile margins on contact page

--- a/src/components/subpages/About.Style.css
+++ b/src/components/subpages/About.Style.css
@@ -27,11 +27,6 @@
   padding: 3rem;
 }
 
-/* .container-light {
-  background-color: rgba(243, 243, 243, 0.7);
-  border-radius: 2rem;
-} */
-
 .about-body {
   margin-top: 2rem;
   margin-bottom: 4rem;
